作业评论删除默认头像

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -26,7 +26,7 @@
 				<h6 class="comment-item">完成的作业</h6>
 				<div class="homework-container">
 					<div class='student-info'>
-						<img id="stu-head" class="stuInfo-img" src="http://oigr7qsvz.bkt.clouddn.com/headimge4.png?1487316536287" />
+						<img id="stu-head" class="stuInfo-img" src="" />
 						<div class='stuInfo-words'>
 							<h5 id='stu-name' class="stu-name"></h5>
 							<p id='submit-time' class="submit-time"></p>
