--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -35,7 +35,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/webviewGroup.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
 			mui.plusReady(function() {
 				var group = new webviewGroup("viewGroup", {
 					items: [{
