--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -16,10 +16,11 @@
 		<link rel="stylesheet" href="../../css/utils/pullToRefresh.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/icons-extra.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+		<!--展现样式表-->
 		<link rel="stylesheet" href="../../css/show/show.css" />
 		<style type="text/css">
 			.nouser {
-				/*无此用户*/
+				/**/
 				position: absolute;
 				text-align: center;
 				color: #808080;
@@ -81,6 +82,7 @@
 					doubletap: true,
 				}
 			});
+			var focusPersonNum = 0;
 			idFlag = 'zx';
 			var datasource = {}; //数据源
 			var pageIndex = 1; //第几页
@@ -112,6 +114,7 @@
 						var self = this
 						events.singleWebviewInPeriod(self, '../quan/pub-dynamic.html', 'zx');
 					})
+				//切换界面时 退出浏览图片模式
 				main.addEventListener("hide", function(e) {
 					mui.getPreviewImage().close()
 				})
@@ -125,7 +128,7 @@
 					//改变顶部的城市
 					changeIndexHeader();
 				});
-				//详情页改变关注状态 修改本页面数据111
+				//详情页改变关注状态 修改本页面数据
 				window.addEventListener('changeFocus', function(e) {
 					var publisherID = e.detail.data; //被修改的人ID
 					var IsFocused = e.detail.IsFocused; //关注状态
@@ -267,8 +270,6 @@
 				})
 				//退出登录清理展现界面
 				window.addEventListener('cleanShowHome', function() {
-
-					console.log('重新登录')
 					cities = []; //存储当前定制的城市
 					show = true; //是否显示展现的内容
 					pullToRefresh = [] //存储下拉上拉的控件
@@ -537,24 +538,27 @@
 			 * @param {Object} callBack 成功后的回调
 			 */
 			function requestCustomizationCity(callBack) {
-				console.log('获取全部-----关注')
-				var eduArray = [];
-				var tempArray = [];
-				eduArray.push({
-					acode: 0,
-					aname: '全部',
-					aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
-				});
-				//加入关注的人数据
-				eduArray.push({
-					acode: 1,
-					aname: '关注',
-					aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
-					index: 1, //请求第几页数据
-					isRefresh: 0 //是刷新0，还是加载更多1
-				});
-				cities = eduArray.slice(0); //拷贝数组
-				callBack(cities);
+//				isFocused(callBack)
+								console.log('获取全部-----关注')
+								var eduArray = [];
+								var tempArray = [];
+								
+								eduArray.push({
+									acode: 0,
+									aname: '全部',
+									aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+								});
+								//加入关注的人数据
+								eduArray.push({
+									acode: 1,
+									aname: '关注',
+									aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+									index: 1, //请求第几页数据
+									isRefresh: 0 //是刷新0，还是加载更多1
+								});
+				
+								cities = eduArray.slice(0); //拷贝数组
+								callBack(cities);
 			}
 			//			function requestCustomizationCity(callBack) {
 			//				//所需参数
@@ -722,11 +726,11 @@
 						if(data.RspData.Data.length > 0) {
 							getPersonIds(data.RspData.Data, cityCode);
 						} else {
-//							document.getElementById("bot_ul_" + cityCode).innerHTML = '<div id="nouser_' + cityCode + '" class="nouser"><img id="nouser_img_1" style="width:200px;height:200px;margin-top: 60px;" src="../../image/mine/invite_none_0.png" /><div id="nouser_text">没有关注人</div></div>';
-//							setTimeout(function() {
-//								wd.close();
-//							}, 1000);
-//							return;
+							//							document.getElementById("bot_ul_" + cityCode).innerHTML = '<div id="nouser_' + cityCode + '" class="nouser"><img id="nouser_img_1" style="width:200px;height:200px;margin-top: 60px;" src="../../image/mine/invite_none_0.png" /><div id="nouser_text">没有关注人</div></div>';
+							//							setTimeout(function() {
+							//								wd.close();
+							//							}, 1000);
+							//							return;
 						}
 
 					}
@@ -767,6 +771,7 @@
 					if(data.RspCode == 0) {
 						var tempModel = cities[cities.length - 1];
 						var Users = data.RspData.Users;
+						focusPersonNum = Users.length
 						userIDs = [];
 						for(var item in Users) {
 							userIDs.push(Users[item].UserId)
@@ -777,6 +782,92 @@
 						//74.(用户空间）获取多用户空间所有用户动态列表
 						console.log(JSON.stringify(tempModel))
 						getAllUserSpacesByUser(tempModel);
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+			//81.（用户空间）获取用户所有关注的用户
+			function isFocused(callback1) {
+				//游客身份
+				if(!parseInt(myStorage.getItem(storageKeyName.PERSONALINFO).utid)) {
+					var showfocusperson = window.myStorage.getItem(window.storageKeyName.SHOWFOCUSEPERSEN);
+					if(showfocusperson) {
+						var eduArray = [];
+						//加入关注的人数据
+						eduArray.push({
+							acode: 1,
+							aname: '关注',
+							aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+							index: 1, //请求第几页数据
+							isRefresh: 0 //是刷新0，还是加载更多1
+						});
+						eduArray.push({
+							acode: 0,
+							aname: '全部',
+							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+						});
+
+						cities = eduArray.slice(0); //拷贝数组
+						callback1(cities);
+
+					} else {
+
+						var eduArray = [];
+						eduArray.push({
+							acode: 0,
+							aname: '全部',
+							aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+						});
+
+						cities = eduArray.slice(0); //拷贝数组
+						callback1(cities);
+
+					}
+				}
+				//所需参数
+				var comData = {
+					userId: personalUTID //用户ID
+				};
+				var wd = events.showWaiting();
+				//81.（用户空间）获取用户所有关注的用户
+				postDataPro_getFocusByUser(comData, wd, function(data) {
+					console.log('81.（用户空间）获取用户所有关注的用户：' + JSON.stringify(data));
+					wd.close();
+					if(data.RspCode == 0) {
+						var Users = data.RspData.Users;
+						if(Users.length == 0) {
+							focusPersonNum = 0;
+							var eduArray = [];
+							eduArray.push({
+								acode: 0,
+								aname: '全部',
+								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+							});
+
+							cities = eduArray.slice(0); //拷贝数组
+							callback1(cities);
+						} else {
+							focusPersonNum = Users.length;
+							var eduArray = [];
+							//加入关注的人数据
+							eduArray.push({
+								acode: 1,
+								aname: '关注',
+								aflag: 1, //0为根据省市编码获取数据，1为获取关注的人的列表
+								index: 1, //请求第几页数据
+								isRefresh: 0 //是刷新0，还是加载更多1
+							});
+							eduArray.push({
+								acode: 0,
+								aname: '全部',
+								aflag: 0 //0为根据省市编码获取数据，1为获取关注的人的列表
+							});
+
+							cities = eduArray.slice(0); //拷贝数组
+							callback1(cities);
+						}
+
 					} else {
 						mui.toast(data.RspTxt);
 					}
