--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -1,17 +1,35 @@
+<!--关注的课程界面-->
 <!doctype html>
 <html>
 
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>关注的课程</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/micro-course/course-list.css" rel="stylesheet" />
 	</head>
 
 	<body>
+		<!--下拉刷新容器-->
+		<div id="refreshContainer" class="mui-content">
+			<div class="mui-scroll-wrapper">
+				<div class="mui-scroll">
+					<!--数据列表-->
+					<ul id="list-container" class="mui-table-view">
+
+					</ul>
+				</div>
+			</div>
+		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/micro-course/course-list.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			course_list.initFresh();
+			mui.plusReady(function() {
+
+			})
 		</script>
 	</body>
 
