巨丑的微课首页

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -41,9 +41,9 @@
 				<span class="mui-icon iconfont icon-dongtai"></span>
 				<span class="mui-tab-label">展现</span>
 			</a>
-			<a class="mui-tab-item" href="../qiuzhi/qiuzhi_home.html">
+			<a class="mui-tab-item" href="../micro-course/course-home.html">
 				<span class="mui-icon iconfont icon-wenda2"></span>
-				<span class="mui-tab-label">求知</span>
+				<span class="mui-tab-label">微课</span>
 			</a>
 		</nav>
 	</body>
