--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<!--下拉刷新容器-->
-		<div id="refreshContainer" class="mui-content">
+		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index: 0;">
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
 					<!--数据列表-->
@@ -23,12 +23,19 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/mui.pullToRefresh.js"></script>
+		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/micro-course/course-list.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			course_list.initFresh();
+			var freshContainer;
+			var freshFlag;
+			var pageIndex=1;
 			mui.plusReady(function() {
-
+				course_list.getData(pageIndex,document.getElementById("list-container"),course_list.setData);
 			})
 		</script>
 	</body>
