--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -30,24 +30,44 @@
 				<div class="mui-indicator mui-active"></div>
 				<div class="mui-indicator"></div>
 			</div>
-			<a class="mui-pull-right mui-icon mui-icon-search"></a>
+			<a id="btn-search" class="mui-pull-right mui-icon mui-icon-search"></a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/utils/webviewGroup.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				var group = new webviewGroup("viewGroup", {
+				mui.fire(plus.webview.getLaunchWebview(), "indexReady");
+				events.addTap("btn-search", function() {
+					this.disabled = true;
+					events.singleWebviewInPeriod(this, "course-search.html", "");
+				})
+				var group = new webviewGroup("course-home.html", {
 					items: [{
 						id: "course-attended.html",
-						url: "course-attended.html"
+						url: "course-attended.html",
+						extras: {},
+						styles:{
+							top: "45px",
+							bottom: "0px",
+							render: "always"
+						}
 					}, {
 						id: "course-all.html",
-						url: "course-all.html"
+						url: "course-all.html",
+						extras: {},
+						styles:{
+							top: "45px",
+							bottom: "0px",
+							render: "always"
+						}
 					}],
 					onChange: function(obj) {
+						console.log("位置："+obj.index);
 						document.querySelector(".mui-indicator.mui-active").classList.remove("mui-active");
-						document.querySelector("mui-slider-indicator:nth-child(" + (parseInt(obj.index) + 1) + ")").classList.add("mui-active");
+						document.querySelector(".mui-indicator:nth-child(" + (parseInt(obj.index) + 1) + ")").classList.add("mui-active");
 						var title = document.querySelector(".mui-title");
 						if(parseInt(obj.index)) {
 							title.innerText = "全部";
