--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -10,12 +10,6 @@
 		<link href="../../css/quan/custom-textarea.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/publish-answer.css" rel="stylesheet" />
-		<style type="text/css">
-			.mui-checkbox input[type=checkbox]:checked:before,
-			.mui-radio input[type=radio]:checked:before {
-				color: #1db8f1
-			}
-		</style>
 	</head>
 
 	<body style="background-color: white;">
@@ -24,9 +18,10 @@
 			<h1 id="title" class="mui-title"></h1>
 			<a id="publish" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 14px;">发布</a>
 		</header>
-		<div class=" mui-content">
-			<div class="input-content">
-				<textarea id="input-content" placeholder="这一刻的想法" style="border-bottom-color: #e4e4e4;"></textarea>
+		<div id="contentDiv" class="mui-content mui-hidden" style="background-color: white;">
+			<textarea id="askTitle" name="topic" placeholder="标题（最多30字）" style="height: 40px;margin-top: 5px;border-bottom-color: #e4e4e4;overflow:hidden"></textarea>
+			<div id="inputDiv" class="input-content" style="margin-top: -20px;border-color: white;height: 20rem;">
+				<textarea id="input-content" placeholder="请输入内容（最多2000字）" style="border-color: white;height: 15rem;"></textarea>
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji1"></a>
 				</div>
@@ -40,22 +35,11 @@
 				<div id="take_camero" class="take_camero">
 					<a class="mui-icon iconfont icon-shipin"></a>
 				</div>
-			</div>
 
-			<div>
-				<p style="margin-left: 10px;font-size: 15px;height: 30px;padding-top: 5px; background-color: #f2f3f5;">发布到:</p>
 			</div>
-			<div style="margin-left: 10px;">
-				<div id="zoneiv" class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline;margin-left: -20px;">
-					<label style="font-size: 15px;">空间</label>
-					<input id="zone" name="checkbox" value="0" type="checkbox" disabled="disabled" style="margin-top: -7px;" checked>
-				</div>
-				<div id="showDiv" class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; ">
-					<label style="font-size: 15px;">展现</label>
-					<input id="show" name="checkbox" value="1" type="checkbox" style="margin-top: -7px;" checked>
-				</div>
-			</div>
-			<div id="pictures" style="float: left;background-color: transparent;width: 320px;"></div>
+			<hr style="margin-top: 5px; height:1px;border:none;border-top:1px solid #e4e4e4;" />
+			<div id="pictures" style="width: 100%;"></div>
+
 		</div>
 
 	</body>
@@ -97,9 +81,18 @@
 			var title = document.getElementById('title');
 			title.innerText = events.shortForString(userInfo.unick, 12)
 			if(pageFlag == 'jxq') {
+				var askTitle = document.getElementById("askTitle");
+				askTitle.parentElement.removeChild(askTitle)
+				document.getElementById("inputDiv").style.marginTop = '0px';
+				document.getElementById("input-content").placeholder = '这一刻的想法'
+				document.getElementById("contentDiv").className = 'mui-content';
 				console.log('jxq')
+				
 				//				document.getElementById("show").checked = false;
 			} else {
+				var askTitle = document.getElementById("askTitle");
+				console.log(askTitle.outerHTML)
+				document.getElementById("contentDiv").className = 'mui-content';
 				console.log('zx')
 				//				document.getElementById("show").checked = true;
 			}
@@ -112,81 +105,81 @@
 			//				});
 			CloudFileUtil.setDelPicListener();
 			CloudFileUtil.setPlayVideoListener();
-			
+
 			//录音按钮
 			events.addTap('get_record', function() {
 				mui.toast('功能暂未开放！');
 			});
 
 			events.addTap('take_camero', function() {
-				var item=this;
-					jQuery("#take_camero").css('pointerEvents', 'none');
+				var item = this;
+				jQuery("#take_camero").css('pointerEvents', 'none');
 
-					item.setAttribute("disabled","disabled");
-					console.log("item不能点击了！"+item.id); 
-					if(CloudFileUtil.files.length > 0) {
-						switch(CloudFileUtil.files[0].type) {
-							case 1:
-								mui.toast("只能上传一种附件！");
-								break;
-							case 2:
-								mui.toast("只能上传一个视频！");
-								break;
-							default:
-								break;
-						}
-						jQuery("#take_camero").css('pointerEvents', 'all');
-						return;
+				item.setAttribute("disabled", "disabled");
+				console.log("item不能点击了！" + item.id);
+				if(CloudFileUtil.files.length > 0) {
+					switch(CloudFileUtil.files[0].type) {
+						case 1:
+							mui.toast("只能上传一种附件！");
+							break;
+						case 2:
+							mui.toast("只能上传一个视频！");
+							break;
+						default:
+							break;
 					}
-					video.recordVideo({}, function(path) {
-						events.showWaiting();
-						console.log("保存在本地的路径：" + path);
-						load.getManageOptions(2, path, function(mData, thumb) {
-							console.log("视频获取的各项参数：" + JSON.stringify(data));
-							mData.saveSpace = storageKeyName.PERSONALSPACE;
-							mData.spaceId = 6;
-							var data = CloudFileUtil.getSingleImgUploadOptions(path, mData.spaceId, mData.spaceType, mData.saveSpace, mData.options);
-							CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
-								console.log("获取的数据：" + JSON.stringify(datas));
-								if(datas.Status == 1) {
-									var tokenInfo = datas.Data;
-									//上传文件
-									CloudFileUtil.uploadFile(tokenInfo, path, function(uploadData, status) {
-										console.log("获取的上传数据：" + JSON.stringify(uploadData));
-										console.log("获取的token信息：" + JSON.stringify(tokenInfo));
-										var img = { //图片信息
-											url: tokenInfo.Domain + tokenInfo.Key,
-											thumb: tokenInfo.OtherKey[data.thumbKey],
-											clip: tokenInfo.OtherKey[data.thumbKey] + "?imageMogr2/gravity/Center/crop/!" + mData.options.thumbSize.width + "x" + mData.options.thumbSize.width * 0.45,
-											localPath:path,
-											type: 2
-										}
-										//										console.log("获取的图片信息：" + JSON.stringify(img));
-										//关闭等待框
-										plus.nativeUI.closeWaiting();
-										//放置图片
-										CloudFileUtil.setPic(img, 0, thumb);
-										jQuery("#take_camero").css('pointerEvents', 'all');
-									});
-								}
+					jQuery("#take_camero").css('pointerEvents', 'all');
+					return;
+				}
+				video.recordVideo({}, function(path) {
+					events.showWaiting();
+					console.log("保存在本地的路径：" + path);
+					load.getManageOptions(2, path, function(mData, thumb) {
+						console.log("视频获取的各项参数：" + JSON.stringify(data));
+						mData.saveSpace = storageKeyName.PERSONALSPACE;
+						mData.spaceId = 6;
+						var data = CloudFileUtil.getSingleImgUploadOptions(path, mData.spaceId, mData.spaceType, mData.saveSpace, mData.options);
+						CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
+							console.log("获取的数据：" + JSON.stringify(datas));
+							if(datas.Status == 1) {
+								var tokenInfo = datas.Data;
+								//上传文件
+								CloudFileUtil.uploadFile(tokenInfo, path, function(uploadData, status) {
+									console.log("获取的上传数据：" + JSON.stringify(uploadData));
+									console.log("获取的token信息：" + JSON.stringify(tokenInfo));
+									var img = { //图片信息
+										url: tokenInfo.Domain + tokenInfo.Key,
+										thumb: tokenInfo.OtherKey[data.thumbKey],
+										clip: tokenInfo.OtherKey[data.thumbKey] + "?imageMogr2/gravity/Center/crop/!" + mData.options.thumbSize.width + "x" + mData.options.thumbSize.width * 0.45,
+										localPath: path,
+										type: 2
+									}
+									//										console.log("获取的图片信息：" + JSON.stringify(img));
+									//关闭等待框
+									plus.nativeUI.closeWaiting();
+									//放置图片
+									CloudFileUtil.setPic(img, 0, thumb);
+									jQuery("#take_camero").css('pointerEvents', 'all');
+								});
+							}
 
-							}, function(xhr, type, errorThrown) {
-								console.log("错误类型：" + type + errorThrown);
-								plus.nativeUI.closeWaiting(); //关闭等待框
-								jQuery("#take_camero").css('pointerEvents', 'all');
-							});
-						})
-					}, function(errData) {
-						console.log(errData.code);
-						mui.toast(errData.message);
-						jQuery("#take_camero").css('pointerEvents', 'all');
+						}, function(xhr, type, errorThrown) {
+							console.log("错误类型：" + type + errorThrown);
+							plus.nativeUI.closeWaiting(); //关闭等待框
+							jQuery("#take_camero").css('pointerEvents', 'all');
+						});
 					})
-				});
+				}, function(errData) {
+					console.log(errData.code);
+					mui.toast(errData.message);
+					jQuery("#take_camero").css('pointerEvents', 'all');
+				})
+			});
 			events.addTap('get_gallery', function() {
 				if(CloudFileUtil.files.length > 0 && CloudFileUtil.files[0].type != 1) {
-						mui.toast("只允许上传一种附件！");
-						return;
-					}
+					mui.toast("只允许上传一种附件！");
+					return;
+				}
 				if(CloudFileUtil.files.length < 9) {
 					var picCount = 0; //上传图片计数
 					gallery.getMultiplePic(9 - CloudFileUtil.files.length, function(paths) { //回调函数
@@ -244,7 +237,7 @@
 
 				var textView = document.getElementById('input-content');
 				var tempText = textView.value;
-				
+
 				if(!tempText || tempText == '') {
 					mui.toast('请输入内容');
 					return;
@@ -252,24 +245,16 @@
 					mui.toast('不能超过2000字');
 					return;
 				} else {
-//					tempText = replaceAllBL(tempText)
+					//					tempText = replaceAllBL(tempText)
 				}
 				console.log(tempText.length)
 				var pubScopes;
-				var chenckBox1 = document.getElementById('zone')
-				var chenckBox2 = document.getElementById('show')
-				if(chenckBox1.checked && chenckBox2.checked) {
-					pubScopes = '[1,2]';
-				} else if(!chenckBox1.checked && chenckBox2.checked) {
-					pubScopes = '[2]';
-				} else {
+				if(pageFlag=='jxq'){
 					pubScopes = '[1]';
+				}else{
+					pubScopes = '[2]';
 				}
-				//				if(!chenckBox.checked) {
-				//					pubScopes = '[1]';
-				//				} else {
-				//					pubScopes = '[1,2]';
-				//				}
+
 				var pubArea;
 				var TAs = getTypeAddress();
 				if(tempInfo.uarea.acode == undefined) {
@@ -285,7 +270,7 @@
 					encType: TAs.encType,
 					encAddr: TAs.encAddr,
 					encImg: TAs.encImg,
-					encLen:0,
+					encLen: 0,
 					encIntro: '',
 					pubScopes: pubScopes,
 					pubArea: pubArea
@@ -389,9 +374,9 @@
 		 */
 		events.addTap('take_pic', function() {
 			if(CloudFileUtil.files.length > 0 && CloudFileUtil.files[0].type != 1) {
-						mui.toast("只允许上传一种附件！");
-						return;
-					}
+				mui.toast("只允许上传一种附件！");
+				return;
+			}
 			if(CloudFileUtil.files.length < 9) {
 				camera.getPic(camera.getCamera(), function(picPath) {
 					plus.nativeUI.showWaiting(storageKeyName.WAITING);
