--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -53,8 +53,9 @@
 				padding-top: 0px;
 			}
 
-			.mui-collapse-content p {
+			.mui-collapse-content {
 				font-size: 14px;
+				color: #808080;
 			}
 
 			.course-top .mui-table-view-cell>a:not(.mui-btn).mui-active,
@@ -89,7 +90,7 @@
 			.course-info,
 			.course-comment-info {
 				color: #B7B7B7;
-				font-size: 13px;
+				font-size: 14px;
 			}
 
 			.course-top .course-info {
@@ -107,14 +108,12 @@
 
 			.course-more {
 				text-align: center;
-			}
-
-			.course-more {
 				color: #B7B7B7;
+				font-size: 14px;
 			}
 
 			.course-more .mui-icon-arrowdown {
-				font-size: 13px;
+				font-size: 14px;
 			}
 
 			.course-list {
@@ -158,22 +157,24 @@
 			}
 
 			.course-comment-info,
-			.course-comment-reply-info {
+			.course-comment-reply-info,
+			.course-comment-reply-content {
 				display: inline;
 			}
 
 			.course-comment-title {
-				/*标题*/
-				background-color: #EEEEEE;
+				/*评论栏标题*/
+				background-color: #F2F2F2;
 				padding: 10px;
-				border-left: 3px solid #64A1EB;
-				font-weight: 900;
+				border-left: 3px solid #1DB8F1;
+				font-size: 15px;
+				color: #323232;
 			}
 
 			.course-comment-personal-headimage {
 				/*评论者头像*/
-				width: 30px;
-				height: 30px;
+				width: 40px;
+				height: 40px;
 				border-radius: 50%;
 				float: left;
 				margin-right: 10px;
@@ -182,38 +183,47 @@
 			.course-comment .icon-zanzan1 {
 				/*评论点赞按钮*/
 				float: right;
-				line-height: 30px;
+				line-height: 40px;
 				margin-left: 30px;
 			}
 
 			.course-comment-personal-name {
 				/*评论者昵称*/
 				font-size: 15px;
-				line-height: 30px;
+				color: #323232;
+				line-height: 40px;
 			}
 
 			.course-comment-content {
 				/*评论的内容*/
 				margin: 11px 0;
 				color: #808080;
+				font-size: 14px;
 			}
 
 			.course-comment-reply {
 				/*评论回复区域*/
 				font-size: 14px;
-				background-color: #E4E4E4;
+				background-color: #F2F2F2;
 				padding: 5px;
+				margin-top: 11px;
 			}
 
 			.course-comment-reply-name {
 				/*回复者的名称*/
 				display: inline;
-				color: deepskyblue;
+				color: #1DB8F1;
+				font-size: 14px;
 			}
 
 			.course-comment-reply-all {
 				/*查看所有回复*/
-				color: deepskyblue;
+				color: #1DB8F1;
+				font-size: 14px;
+			}
+			.course-comment-reply-content{
+				font-size: 14px;
+				color: #808080;
 			}
 		</style>
 	</head>
@@ -240,7 +250,7 @@
 					</li>
 					<li id="collapse_content_li" class="mui-table-view-cell mui-collapse">
 						<div class="mui-collapse-content">
-							<p>一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</p>
+							一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
 						</div>
 					</li>
 					<li class="mui-table-view-cell course-info">
@@ -323,7 +333,7 @@
 								<div class="course-comment-reply-info">@</div>
 								<div class="course-comment-reply-name">4321</div>
 								<div class="course-comment-reply-info">:</div>
-								<div class="course-comment-reply-info">
+								<div class="course-comment-reply-content">
 									一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
 								</div>
 							</div>
@@ -332,20 +342,12 @@
 								<div class="course-comment-reply-info">@</div>
 								<div class="course-comment-reply-name">4321</div>
 								<div class="course-comment-reply-info">:</div>
-								<div class="course-comment-reply-info">
+								<div class="course-comment-reply-content">
 									一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
 								</div>
 							</div>
 							<div class="course-comment-reply-all">查看全部>></div>
 						</div>
-					</li>
-					<li class="mui-table-view-cell">
-						<img src="../../image/dynamic/u101.png" class="course-comment-personal-headimage" />
-						<div class="mui-icon iconfont icon-zanzan1">(20)</div>
-						<div class="mui-ellipsis course-comment-personal-name">一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</div>
-						<div class="course-comment-content">一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十</div>
-						<div class="course-comment-info">回复100</div>
-						<div class="mui-pull-right course-comment-info">2017-6-2</div>
 					</li>
 				</ul>
 			</div>
