--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -27,11 +27,15 @@
 		<script src="../../js/mui.pullToRefresh.js"></script>
 		<script src="../../js/mui.pullToRefresh.material.js"></script>
 		<script src="../../js/micro-course/course-list.js"></script>
+		<script src="../../js/publicMicroClass.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			var freshContainer;
 			var freshFlag;
+			var pageFlag = 1;//关注0，全部1
+			var totalPage = 0;//数据总页数
 			var pageIndex=1;
+			var courseArray = [];//显示的数组
 			course_list.initFresh();
 			mui.plusReady(function() {
 				course_list.getData(pageIndex,document.getElementById("list-container"),course_list.setData);
