--- a/JiaoBaoYun-hb/html/micro-course/history-records.html
+++ b/JiaoBaoYun-hb/html/micro-course/history-records.html
@@ -10,6 +10,206 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<!--<link href="../../css/qiuzhi/qiuzhi-inviteAnswer.css" rel="stylesheet" />-->
 		<style>
+			body,
+			.mui-content {
+				word-wrap: break-word;
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.course-top .mui-table-view-cell:after,
+			.course-comment .mui-table-view-cell:after {
+				height: 0px;
+			}
+
+			.mui-table-view-cell.mui-collapse.mui-active {
+				margin-top: 0;
+			}
+
+			.course-top .mui-navigate-right {
+				width: 21px;
+				height: 21px;
+				position: absolute;
+				right: 10px;
+			}
+
+			.course-top .mui-navigate-right:after {
+				content: "\e581";
+				right: 5px;
+			}
+
+			.mui-collapse {
+				padding: 0px;
+			}
+
+			.mui-table-view-cell.mui-collapse .mui-collapse-content {
+				margin: 0px;
+				padding: 11px 15px;
+				padding-top: 0px;
+			}
+
+			.mui-collapse-content p {
+				font-size: 14px;
+			}
+
+			.course-top .mui-table-view-cell>a:not(.mui-btn).mui-active,
+			.course-top .mui-table-view-cell.mui-active,
+			.course-comment .mui-table-view-cell.mui-active {
+				background-color: white;
+			}
+
+			.mui-bar-tab button {
+				/*评论按钮*/
+				text-align: left;
+				padding: 6px 12px 7px !important;
+				color: #CCCCCC;
+				margin: 10px 3% !important;
+				width: 94%;
+				top: 0 !important;
+			}
+
+			.course-title {
+				font-size: 16px;
+				color: #323232;
+			}
+
+			.course-top .course-title {
+				margin-right: 15px;
+			}
+
+			.course-list .course-title {
+				margin-bottom: 11px;
+			}
+
+			.course-info,
+			.course-comment-info {
+				color: #B7B7B7;
+				font-size: 13px;
+			}
+
+			.course-top .course-info {
+				margin-top: -11px !important;
+			}
+
+			.course-info .mui-pull-right {
+				display: inline;
+			}
+
+			.icon-zanzan1 {
+				font-size: 13px;
+				color: #B7B7B7;
+			}
+
+			.course-more {
+				text-align: center;
+			}
+
+			.course-more {
+				color: #B7B7B7;
+			}
+
+			.course-more .mui-icon-arrowdown {
+				font-size: 13px;
+			}
+
+			.course-list {
+				margin-top: 8px;
+			}
+
+			.course-list-li {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+
+			.course-list-li-left {
+				width: 60%;
+			}
+
+			.course-list-img-div {
+				float: right;
+				overflow: hidden;
+				width: 40%;
+				line-height: 0px;
+			}
+
+			.course-list-img {
+				/*课程列表图片的*/
+				visibility: hidden;
+				width: 100%;
+			}
+
+			.course-image-play-div {
+				position: absolute;
+				right: 15px;
+				background-color: rgba(0, 0, 0, 0.5);
+				visibility: hidden;
+			}
+
+			.course-image-play {
+				/*视频播放按钮*/
+				width: 55px;
+				height: 55px;
+			}
+
+			.course-comment-info,
+			.course-comment-reply-info {
+				display: inline;
+			}
+
+			.course-comment-title {
+				/*标题*/
+				background-color: #EEEEEE;
+				padding: 10px;
+				border-left: 3px solid #64A1EB;
+				font-weight: 900;
+			}
+
+			.course-comment-personal-headimage {
+				/*评论者头像*/
+				width: 30px;
+				height: 30px;
+				border-radius: 50%;
+				float: left;
+				margin-right: 10px;
+			}
+
+			.course-comment .icon-zanzan1 {
+				/*评论点赞按钮*/
+				float: right;
+				line-height: 30px;
+				margin-left: 30px;
+			}
+
+			.course-comment-personal-name {
+				/*评论者昵称*/
+				font-size: 15px;
+				line-height: 30px;
+			}
+
+			.course-comment-content {
+				/*评论的内容*/
+				margin: 11px 0;
+				color: #808080;
+			}
+
+			.course-comment-reply {
+				/*评论回复区域*/
+				font-size: 14px;
+				background-color: #E4E4E4;
+				padding: 5px;
+			}
+
+			.course-comment-reply-name {
+				/*回复者的名称*/
+				display: inline;
+				color: deepskyblue;
+			}
+
+			.course-comment-reply-all {
+				/*查看所有回复*/
+				color: deepskyblue;
+			}
 			.mui-scroll-wrapper {
 				padding-top: 44px;
 			}
@@ -90,37 +290,6 @@
 				width: 40px;
 			}
 			
-			.mui-table h4,
-			.mui-table h5,
-			.mui-table .mui-h5,
-			.mui-table .mui-h6,
-			.mui-table p {
-				margin-top: 0;
-				padding-left: 0px;
-			}
-			
-			.mui-table h4 {
-				font-family: "楷体";
-				font-size: 1.6rem;
-				line-height: 21px;
-				font-weight: 510;
-				padding-left: 0px;
-				/*line-height: 21px;
-				font-weight: 510;
-				padding-left: 10px;
-				letter-spacing: 0.5px;*/
-			}
-			
-			.mui-table .oa-icon {
-				position: absolute;
-				right: 0;
-				bottom: 0;
-			}
-			
-			.mui-table .oa-icon-star-filled {
-				color: #f14e41;
-			}
-			
 			.mui-table-view {
 				background: #F2F3F5;
 			}
@@ -140,38 +309,59 @@
 		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
-					<ul id="list-container" class="mui-table-view">
-						<li class="mui-table-view-cell">
-							<div class="mui-pull-left">
-								<p style="font-size: 16px;color: black;">第四节 力的向量分析法1第四节 力的向量分析法1第四节 力的向量分析法1</p>
-								<p style="font-size: 14px;color: gray;margin-top: 10px;">上传时间；2017-5-25</p>
+				<ul class="mui-table-view course-list">
+					<li class="mui-table-view-cell">
+						<div class="course-title">
+							文字一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+						</div>
+						<div class="course-info">上传时间:2017-6-1</div>
+					</li>
+					<li class="mui-table-view-cell">
+						<div class="course-title">
+							音频
+						</div>
+						<svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="300px" height="50px" viewBox="0 0 300 50" enable-background="new 0 0 300 50" xml:space="preserve">
+							<path fill="none" stroke="#1DB8F1" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M28.476,2.813
+	c0,0,240.274-0.5,250.649-0.156s20.13,8.112,19.836,21.395s-8.242,21.279-19.602,21.279s-23.074,0-23.074,0H16.764
+	c0,0-5.817-0.469-15.266,3.67c0,0,9.565-8.16,9.41-16.671L10.83,19.835C10.83,19.835,10.517,5.39,28.476,2.813z" />
+							<path fill="#B7B7B7" d="M50.004,37.298c-0.167,0-0.5,0-0.667-0.166c-0.334-0.335-0.334-0.835,0-1.168
+	c6.502-6.503,6.502-17.342,0-23.845c-0.334-0.333-0.334-0.833,0-1.167c0.333-0.333,0.833-0.333,1.167,0
+	c7.17,7.17,7.17,19.009,0,26.18C50.338,37.298,50.171,37.298,50.004,37.298z M43.668,32.796c-0.167,0-0.5-0.167-0.667-0.334
+	c-0.333-0.333-0.333-0.834,0-1.167c2.001-1.834,3.168-4.502,3.168-7.336c0-2.835-1.167-5.502-3.168-7.337
+	c-0.333-0.333-0.333-0.833,0-1.167s0.834-0.333,1.167,0c2.334,2.167,3.668,5.169,3.668,8.504c0,3.335-1.334,6.335-3.668,8.504
+	C44.001,32.629,43.835,32.796,43.668,32.796z M37.666,29.294c-0.167,0-0.5,0-0.667-0.167c-0.333-0.333-0.333-0.834,0-1.166
+	c1.167-1.168,1.667-2.502,1.667-4.002c0-1.334-0.667-2.668-1.667-3.668c-0.333-0.333-0.333-0.834,0-1.168
+	c0.333-0.333,0.833-0.333,1.167,0c1.334,1.334,2.168,3.001,2.168,4.836c0,2-0.667,3.834-2.168,5.168
+	C37.999,29.294,37.832,29.294,37.666,29.294z" />
+							<text transform="matrix(1 0 0 1 73.936 32.707)" fill="#B7B7B7" font-family="'MicrosoftYaHei'" font-size="20.9861">120”</text>
+						</svg>
+						<div class="course-info">上传时间:2017-6-1</div>
+					</li>
+					<li class="mui-table-view-cell course-list-li">
+						<div class="course-list-li-left">
+							<div class="course-title">
+								图片
 							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-pull-left  mui-col-xs-8">
-								<p style="font-size: 16px;color: black;">第四节 力的向量分析法1</p>
-								<p style="font-size: 14px;color: gray;margin-top: 10px;">上传时间；2017-5-25</p>
+							<div class="course-info">上传时间:2017-6-1</div>
+						</div>
+						<div class="course-list-img-div">
+							<img id="course-image-1" class="course-list-img" onload="onImageLoad(this);" onerror="onImageError(this);" />
+						</div>
+					</li>
+					<li class="mui-table-view-cell course-list-li">
+						<div class="course-list-li-left">
+							<div class="course-title">
+								视频
 							</div>
-							<img style="height: 50px;" class="mui-pull-right   mui-col-xs-4" src="../../image/qiuzhi/expertBG.jpg" />
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-pull-left mui-col-xs-8">
-								<p style="font-size: 16px;color: black;">第四节 力的向量分析法1第四节 力的向量分析法1</p>
-								<p style="font-size: 14px;color: gray;margin-top: 10px;">上传时间；2017-5-25</p>
+							<div class="course-info">上传时间:2017-6-1</div>
+						</div>
+						<div class="course-list-img-div">
+							<div class="course-image-play-div">
+								<img id="course-image-play" class="course-image-play" onload="onPlayLoad(this);" onerror="onPlayError(this);" />
 							</div>
-							<div class=" mui-col-xs-4 mui-pull-right" style="height: 50px;background-image:url('../../image/qiuzhi/expertBG.jpg');
-								background-repeat:no-repeat;background-position:center;background-size:cover;text-align:center;">
-								<img style="height: 30px;width: 30px;margin-top:10px;margin-left: -5px;" src="../../image/utils/playvideo.png" />
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-pull-left  mui-col-xs-8">
-								<p style="font-size: 16px;color: black;">第四节 力的向量分析法1</p>
-								<p style="font-size: 14px;color: gray;margin-top: 10px;">上传时间；2017-5-25</p>
-							</div>
-							<img style="height: 50px;" class="mui-pull-right   mui-col-xs-4" src="../../image/qiuzhi/expertBG.jpg" />
-						</li>
-					</ul>
+							<img id="course-image-2" class="course-list-img" onload="onImageLoad(this);" onerror="onImageError(this);" />
+						</div>
+					</li>
 				</div>
 			</div>
 		</div>
@@ -188,138 +378,129 @@
 </html>
 
 <script type="text/javascript">
-	var ExpertsInfo; //专家详细页传来的 专家信息
-	var pageIndex = 1; //请求数据页面
-	var totalPageCount; //总页码
-	var flagRef = 0; //是刷新0，还是加载更多1
-	var datasource = []; //回答总数组
+	var pullRefresh; //上拉加载控件
+			var page = {
+				pageIndex: 0,
+				totalPage: 0
+			}; //评论的页数
 
-	mui.init();
-	mui.plusReady(function() {
-		ExpertsInfo = plus.webview.currentWebview().data;
-		//清除节点
-		document.getElementById('list-container').innerHTML = "";
-		//25.获取某个用户的提问列表
-
-		console.log('专家回答页传值：' + JSON.stringify(ExpertsInfo));
-		mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
-			var index = this.id.replace('li', '');
-			var modelTemp = datasource[index];
-			events.askDetailOrAnswerDetail(1, modelTemp.AskId, function(data) {
-				if(data) {
-					//跳转界面
-					events.openNewWindowWithData('qiuzhi-question.html', {
-						askID: modelTemp.AskId, //问题id
-						channelInfo: modelTemp, //当前话题
-						allChannels: window.myStorage.getItem('allChannels') //全部话题
-					});
-				}
+			mui.init();
+			mui.plusReady(function() {
+				document.getElementById("course-image-1").src = "../../image/cloud/notes_bg2.jpg";
+				document.getElementById("course-image-2").src = "../../image/ios_1242-2208.png";
+				document.getElementById("course-image-play").src = "../../image/utils/playvideo.png";
+				initControl();
+				initListener();
 			});
-		});
-		getAsksByUser(ExpertsInfo.UserId);
-		//阻尼系数、初始化刷新加载更多
-		var deceleration = mui.os.ios ? 0.003 : 0.0009;
-		mui('.mui-scroll-wrapper').scroll({
-			bounce: false,
-			indicators: true, //是否显示滚动条
-			deceleration: deceleration
-		});
-		mui(".mui-scroll-wrapper .mui-scroll").pullToRefresh({
-			down: {
-				callback: function() {
-					//清除节点
-					document.getElementById('list-container').innerHTML = "";
-					var self = this;
-					console.log("下拉刷新");
-					pageIndex = 1;
-					flagRef = 0;
-					getAsksByUser(ExpertsInfo.UserId);
-					setTimeout(function() {
-						//结束下拉刷新
-						self.endPullDownToRefresh();
-					}, 1000);
-				}
-			},
-			up: {
-				callback: function() {
-					var self = this;
-					console.log("上拉加载更多");
-					flagRef = 1;
-					if(pageIndex <= totalPageCount) {
-						getAsksByUser(ExpertsInfo.UserId);
-						setTimeout(function() {
-							//结束下拉刷新
-							self.endPullUpToRefresh();
-							if(mui(".mui-table-view-cell").length < 10) {
-								mui(".mui-pull-loading")[0].innerHTML = "";
+
+			/**
+			 * 初始化控件
+			 */
+			function initControl() {
+				//初始化下拉，上拉控件
+				var deceleration = mui.os.ios ? 0.003 : 0.0009;
+				mui('.mui-scroll-wrapper').scroll({
+					bounce: false,
+					indicators: true, //是否显示滚动条
+					deceleration: deceleration
+				});
+				pullRefresh = mui('.mui-scroll-wrapper .mui-scroll').pullToRefresh({
+					up: {
+						contentinit: '', //默认没有更多显示空白
+						contentnomore: '', //隐藏没有更多提示
+						callback: function() {
+							console.log('up ' + JSON.stringify(page));
+							if(page) {
+								//requestData(page.pageIndex + 1);
+							} else {
+								mui.toast('数据异常，请下拉刷新后重新尝试');
 							}
-						}, 1000);
+							setTimeout(function() {
+								endPullUp();
+							}, 1000);
+						}
+					}
+				});
+			}
+
+			/**
+			 * 初始化监听
+			 */
+			function initListener() {
+
+				//显示课程简介
+				document.getElementById('collapse_content_show').addEventListener('tap', function() {
+					var collapse_content_li = document.getElementById("collapse_content_li");
+					var classNameList = collapse_content_li.className.split(" ");
+					var show = false;
+					for(var i in classNameList) {
+						if(classNameList[i] == "mui-active") {
+							show = true;
+							break;
+						}
+					}
+					if(show) {
+						collapse_content_li.className = "mui-table-view-cell mui-collapse";
 					} else {
-						//结束下拉刷新
-						self.endPullUpToRefresh();
-						mui(".mui-pull-loading")[0].innerHTML = "没有更多了";
+						collapse_content_li.className = "mui-table-view-cell mui-collapse mui-active";
 					}
+				});
+			}
+
+			/**
+			 * 结束上拉加载更多
+			 */
+			function endPullUp() {
+				if(page && page.pageIndex >= page.totalPage) {
+					console.log('没有下一页');
+					pullRefresh.endPullUpToRefresh(true);
+				} else {
+					pullRefresh.endPullUpToRefresh();
 				}
 			}
-		});
-	});
-
-	//25.获取某个用户的提问列表
-	function getAsksByUser(userId) { //需要加密的数据
-		var comData = {
-			userId: userId, //用户ID
-			pageIndex: pageIndex, //当前页数
-			pageSize: '10' //每页记录数,传入0，获取总记录数
-		};
-		// 等待的对话框
-		var wd = events.showWaiting();
-		//25.获取某个用户的提问列表
-		postDataQZPro_getAsksByUser(comData, wd, function(data) {
-			wd.close();
-			console.log('25.获取某个用户的提问列表:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-			if(data.RspCode == 0) {
-				//总页数
-				totalPageCount = data.RspData.TotalPage;
-				pageIndex++;
-				//如果是旧数据，去掉里面的html标签
-				for(var i = 0; i < data.RspData.Data.length; i++) {
-					var temp = data.RspData.Data[i];
-					if(temp.AskSFlag == 1) {
-						temp.AskTitle = events.deleteHtml(temp.AskTitle);
-					}
+			/**
+			 * 课程列表中的图片加载成功
+			 * @param {Object} img
+			 */
+			function onImageLoad(img) {
+				img.parentNode.style.height = parseInt(img.offsetWidth * (3 / 4)) + "px";
+				if(img.offsetWidth > img.offsetHeight) { //宽的图片
+					img.style.height = img.parentNode.offsetHeight + "px";
+					img.style.width = "initial";
+					img.style.marginLeft = parseInt(img.offsetWidth * 0.5 - img.parentNode.offsetWidth * 0.5) * (-1) + 'px';
+				} else { //高的图片
+					img.style.marginTop = parseInt(img.offsetHeight * 0.5 - img.parentNode.offsetHeight * 0.5) * (-1) + 'px';
 				}
-				if(flagRef == 0) { //刷新
-					datasource = data.RspData.Data;
-					if(data.RspData.Data.length == 0) {
-						mui.toast('没有数据');
-					}
-				} else { //加载更多
-					//合并数组
-					datasource = datasource.concat(data.RspData.Data);
-				}
-				addData(data.RspData.Data);
-				if(mui(".mui-table-view-cell").length < 10) {
-					mui(".mui-pull-loading")[0].innerHTML = "";
-				}
-			} else {
-				mui.toast(data.RspTxt);
+				img.style.visibility = "visible";
 			}
-		});
-	};
 
-	function addData(datasource1) {
-		for(var i = 0; i < datasource1.length; i++) {
-			var str_Time = modifyTimeFormat(datasource1[i].AskTime);
-			var list = document.getElementById("list-container");
-			var li = document.createElement("li");
-			li.id = 'li' + i;
-			li.className = 'mui-table-view-cell';
-			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
-				'<h4 class="mui-ellipsis" style="font-size:1.6rem;color: #323232; font-weight:normal;">' + datasource1[i].AskTitle +
-				'</h4><p class="mui-h6 mui-ellipsis"  style="font-size:1.3rem;color: #B7B7B7;">' + datasource1[i].AnswerNum + '回答·' + datasource1[i].FocusNum + '关注·' + str_Time + '</p></div></div>'
-			list.appendChild(li);
-		}
-	}
+			/**
+			 * 课程列表中的图片加载失败
+			 * @param {Object} img
+			 */
+			function onImageError(img) {
+				img.style.visibility = "visible";
+			}
+			/**
+			 * 视频播放按钮加载失败
+			 * @param {Object} img
+			 */
+			function onPlayError(img) {
+				img.parentNode.style.visibility = "visible";
+			}
+			/**
+			 * 视频播放按钮加载成功
+			 * @param {Object} img
+			 */
+			function onPlayLoad(img) {
+				var width = img.parentNode.parentNode.offsetWidth;
+				var height = parseInt(width * (3 / 4));
+				img.parentNode.style.width = width + "px";
+				img.parentNode.style.height = height + "px";
+				img.parentNode.style.visibility = "visible";
+				img.style.marginLeft = parseInt((width - 55) / 2) + "px";
+				img.style.marginTop = parseInt((height - 55) / 2) + "px";
+			}
 </script>
 </body>
 
