--- a/JiaoBaoYun-hb/html/micro-course/course-attended.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-attended.html
@@ -33,13 +33,14 @@
 			mui.init();
 			course_list.initFresh();
 			var freshContainer;
-			var freshFlag;
+			var freshFlag=0;//0默认 1下拉刷新 2上拉加载
 			var pageFlag = 0;//关注0，全部1
 			var courseArray = [];//显示的数组
 			var totalPage = 0;//数据总页数
 			var pageIndex=1;
 			mui.plusReady(function() {
 				course_list.getData(pageIndex,document.getElementById("list-container"),course_list.setData);
+				course_list.setListener();
 			})
 		</script>
 	</body>
