展现事件点击

--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -105,6 +105,7 @@
 			mui.init();
 			mui.plusReady(function() {
 				show_list.getShowList(showCity, document.getElementById("list-container"), show_list.setShowList);
+				show_list.setListListener();
 			})
 		</script>
 	</body>
