--- a/JiaoBaoYun-hb/html/show/show-all.html
+++ b/JiaoBaoYun-hb/html/show/show-all.html
@@ -46,6 +46,7 @@
 			mui.init();
 			mui.plusReady(function() {
 				show_list.getShowList(showCity,document.getElementById("list-container"),show_list.setShowList);
+				show_list.setListListener();
 			})
 		</script>
 	</body>
