修改展现中，关注的人接口

--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -24,13 +24,13 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<h1 class="mui-title">关注</h1>
 			<div id="header-indicator" class="mui-slider-indicator">
 				<div class="mui-indicator mui-active"></div>
 				<div class="mui-indicator"></div>
 			</div>
-			<a id="btn-search" class="mui-pull-right mui-icon mui-icon-search"></a>
+			<!--<a id="btn-search" class="mui-pull-right mui-icon mui-icon-search"></a>-->
 		</header>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/libs/jquery.js"></script>
