--- a/JiaoBaoYun-hb/html/micro-course/course-introduction.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-introduction.html
@@ -17,29 +17,28 @@
 			<h1 id="title" class="mui-title">物理</h1>
 		</header>
 		<div id="divContent" class="mui-content mui-hidden">
-			<br />
-			<div style="font-size: 16px;padding-left: 10px;">授课老师</div>
-			<img id="teaHeadImg" style="padding-left: 10px;" src="../../image/clip.png" />
-			<div style="border-color: green;height: auto;border-width:1px ;border-style:dashed;margin-right: 20px;margin-left: 30px;margin-top: -30px;">
+			<div style="font-size: 16px;padding-left: 10px;padding-top: 15px;;font-weight: 700;">授课老师</div>
+			<img id="teaHeadImg" style="margin-top: 10px;margin-left: 20px;width: 40px;height: 40px;" src="../../image/utils/default_personalimage.png" />
+			<div style="border-color: #1db8f1;height: auto;border-width:1px ;border-style:dashed;margin-right: 20px;margin-left: 40px;margin-top: -27px;">
 
-				<div style="padding:5px 10px;">
-					<p id="teaName" style="text-align: center;color: black;font-size: 14px;"></p><span id="teaInfo" style="text-align: center;color: black;font-size: 14px;">
+				<div style="padding:12px 10px;">
+					<p id="teaName" style="text-align: center;color: #323232;font-size: 15px;font-weight: 700;"></p><span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;">
 
 					</span>
 				</div>
 
 			</div>
-			<p style="background-color:lightgray;height: 1px;margin-top: 10px;"></p>
+			<p style="background-color:#e4e4e4;height: 1px;margin-top: 15px;"></p>
 			<div>
-				<div style="font-size: 16px;padding-left: 10px;">课程介绍</div>
-				<p id="courseInfo" style="padding-left: 40px;color: black;font-size: 14px;padding-right: 10px;">
+				<div style="font-size: 17px;padding-left: 10px;font-weight: 700;">课程介绍</div>
+				<p id="courseInfo" style="padding-left: 40px;color: #323232;font-size: 15px;padding-right: 10px;padding-top: 10px;">
 				</p>
 			</div>
-			<p style="background-color:lightgray;height: 1px;margin-top: 10px;"></p>
-			<p id="history" style="color: black;font-size: 16px;padding-left: 10px;padding-right: 10px;">查看历史<span class="mui-icon iconfont icon-fanhui2" style="color:#b7b7b7;float: right;padding-top: 2px;"></span></p>
-			<p style="background-color:lightgray;height: 1px;margin-top: 10px;"></p>
-			<div align="center">
-				<button id="focusBtn" class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;border: 0;margin-left: 10px;margin-right: 10px;width: 90%;">关注</button>
+			<p style="background-color:#e4e4e4;height: 1px;margin-top: 10px;"></p>
+			<p id="history" style="color: black;font-size: 17px;padding-left: 10px;padding-right: 10px;font-weight: 700;padding-top: 5px;">查看历史<span class="mui-icon iconfont icon-fanhui2" style="color:#b7b7b7;float: right;padding-top: 2px;"></span></p>
+			<p style="background-color:#e4e4e4;height: 1px;margin-top: 15px;"></p>
+			<div align="center" style="padding-top: 10px;">
+				<button id="focusBtn" class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;border: 0;margin-left: 10px;margin-right: 10px;width: 95%;height: 40px;font-size: 16px;">关注</button>
 
 			</div>
 
@@ -98,7 +97,7 @@
 				if(focusecourse) {
 					for(var i in focusecourse) {
 						if(focusecourse[i] == courseModel.TabId) {
-							nodes.focusBtn.style.backgroundColor = 'lightgray'
+							nodes.focusBtn.style.backgroundColor = '#e4e4e4'
 							nodes.focusBtn.innerHTML = '已关注'
 							nodes.focusFlag = 1;
 						} else {
@@ -124,7 +123,7 @@
 				console.log('5.获取是否已对某个课程关注:' + JSON.stringify(data));
 				if(data.RspCode == 0) {
 					if(data.RspData.Result == 1) {
-						nodes.focusBtn.style.backgroundColor = 'lightgray'
+						nodes.focusBtn.style.backgroundColor = '#e4e4e4'
 						nodes.focusBtn.innerHTML = '已关注'
 						nodes.focusFlag = 1;
 
@@ -159,7 +158,7 @@
 				events.toggleStorageArray(storageKeyName.FOCUSECOURSES, parseInt(courseModel.TabId), focusFlag);
 				if(focusFlag == 0) {
 					nodes.focusFlag = 1
-					nodes.focusBtn.style.backgroundColor = 'lightgray'
+					nodes.focusBtn.style.backgroundColor = '#e4e4e4'
 					nodes.focusBtn.innerHTML = '已关注'
 
 				} else {
@@ -190,7 +189,7 @@
 				if(data.RspCode == 0) {
 					nodes.focusFlag = focusFlag;
 					if(nodes.focusFlag == 1) {
-						nodes.focusBtn.style.backgroundColor = 'lightgray'
+						nodes.focusBtn.style.backgroundColor = '#e4e4e4'
 						nodes.focusBtn.innerHTML = '已关注'
 
 					} else {
