--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -20,7 +20,7 @@
 					<div id="list-container">
 						<div class="cityNews-container mui-card">
 							<div class="mui-table-view">
-								<!--<li class="mui-table-view-cell news-container">
+								<li class="mui-table-view-cell news-container">
 									<img class="news-img" src="http://www.2cto.com/uploadfile/2012/0725/20120725082941503.jpg">
 									<div class="news-words">
 										<p class="news-title single-line">子标题栏,乱七八糟，仪表人才，从此走上人生巅峰。我就是我 不一样的烟火</p>
@@ -74,7 +74,7 @@
 											<p class="news-date">2017-05-12</p>
 										</div>
 									</div>
-								</li>-->
+								</li>
 							</div>
 						</div>
 
